--- a/src/View/Result.form
+++ b/src/View/Result.form
@@ -2,6 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
+    <Property name="toolTipText" type="java.lang.String" value="&#x414;&#x43e;&#x441;&#x442;&#x43e;&#x438;&#x43d;&#x441;&#x442;&#x432;&#x430; &#x438; &#x43d;&#x435;&#x434;&#x43e;&#x441;&#x442;&#x430;&#x442;&#x43a;&#x438; &#x428;&#x41f;&#x421; &#x43a;&#x430;&#x43a; &#x43f;&#x435;&#x440;&#x435;&#x43d;&#x43e;&#x441;&#x447;&#x438;&#x43a;&#x43e;&#x432; &#x438;&#x43d;&#x444;&#x43e;&#x440;&#x43c;&#x430;&#x446;&#x438;&#x438;             &#x414;&#x43e;&#x441;&#x442;&#x43e;&#x438;&#x43d;&#x441;&#x442;&#x432;&#x430;:    &#x432;&#x43e;&#x437;&#x43c;&#x43e;&#x436;&#x43d;&#x43e;&#x441;&#x442;&#x44c; &#x43f;&#x440;&#x438;&#x435;&#x43c;&#x430; &#x438; &#x43e;&#x431;&#x440;&#x430;&#x431;&#x43e;&#x442;&#x43a;&#x438; &#x428;&#x41f;&#x421; &#x43f;&#x440;&#x438; &#x43e;&#x442;&#x43d;&#x43e;&#x448;&#x435;&#x43d;&#x438;&#x44f;&#x445; &#x441;&#x438;&#x433;&#x43d;&#x430;&#x43b;/&#x43f;&#x43e;&#x43c;&#x435;&#x445;&#x430; &#x43c;&#x43d;&#x43e;&#x433;&#x43e; &#x43c;&#x435;&#x43d;&#x44c;&#x448;&#x438;&#x445; &#x435;&#x434;&#x438;&#x43d;&#x438;&#x446;&#x44b;; &#x432;&#x44b;&#x441;&#x43e;&#x43a;&#x430;&#x44f; &#x43f;&#x43e;&#x43c;&#x435;&#x445;&#x43e;&#x437;&#x430;&#x449;&#x438;&#x449;&#x435;&#x43d;&#x43d;&#x43e;&#x441;&#x442;&#x44c; &#x43a;&#x430;&#x43a; &#x43f;&#x43e; &#x43e;&#x442;&#x43d;&#x43e;&#x448;&#x435;&#x43d;&#x438;&#x44e; &#x43a; &#x448;&#x438;&#x440;&#x43e;&#x43a;&#x43e;&#x43f;&#x43e;&#x43b;&#x43e;&#x441;&#x43d;&#x44b;&#x43c;, &#x442;&#x430;&#x43a; &#x438; &#x443;&#x437;&#x43a;&#x43e;&#x43f;&#x43e;&#x43b;&#x43e;&#x441;&#x43d;&#x44b;&#x43c; &#x43f;&#x43e;&#x43c;&#x435;&#x445;&#x430;&#x43c;; &#x438;&#x43d;&#x432;&#x430;&#x440;&#x438;&#x430;&#x43d;&#x442;&#x43d;&#x43e;&#x441;&#x442;&#x44c; &#x43a; &#x44f;&#x432;&#x43b;&#x435;&#x43d;&#x438;&#x44e; &#x43c;&#x43d;&#x43e;&#x433;&#x43e;&#x43b;&#x443;&#x447;&#x435;&#x432;&#x43e;&#x441;&#x442;&#x438; &#x432; &#x43a;&#x430;&#x43d;&#x430;&#x43b;&#x435; &#x441;&#x432;&#x44f;&#x437;&#x438;; &#x43e;&#x434;&#x43d;&#x43e;&#x432;&#x440;&#x435;&#x43c;&#x435;&#x43d;&#x43d;&#x430;&#x44f; &#x440;&#x430;&#x431;&#x43e;&#x442;&#x430; &#x432;&#x441;&#x435;&#x445; &#x430;&#x431;&#x43e;&#x43d;&#x435;&#x43d;&#x442;&#x43e;&#x432; &#x432; &#x43e;&#x431;&#x449;&#x435;&#x439; &#x43f;&#x43e;&#x43b;&#x43e;&#x441;&#x435; &#x447;&#x430;&#x441;&#x442;&#x43e;&#x442;; &#x432;&#x44b;&#x441;&#x43e;&#x43a;&#x430;&#x44f; &#x434;&#x43e;&#x441;&#x442;&#x43e;&#x432;&#x435;&#x440;&#x43d;&#x43e;&#x441;&#x442;&#x44c; &#x43f;&#x440;&#x438;&#x43d;&#x438;&#x43c;&#x430;&#x435;&#x43c;&#x43e;&#x439; &#x438;&#x43d;&#x444;&#x43e;&#x440;&#x43c;&#x430;&#x446;&#x438;&#x438;; &#x432;&#x44b;&#x441;&#x43e;&#x43a;&#x430;&#x44f; &#x44d;&#x43d;&#x435;&#x440;&#x433;&#x435;&#x442;&#x438;&#x447;&#x435;&#x441;&#x43a;&#x430;&#x44f; &#x438; &#x441;&#x442;&#x440;&#x443;&#x43a;&#x442;&#x443;&#x440;&#x43d;&#x430;&#x44f; &#x441;&#x43a;&#x440;&#x44b;&#x442;&#x43d;&#x43e;&#x441;&#x442;&#x44c; &#x441;&#x438;&#x433;&#x43d;&#x430;&#x43b;&#x430;; &#x445;&#x43e;&#x440;&#x43e;&#x448;&#x430;&#x44f; &#x44d;&#x43b;&#x435;&#x43a;&#x442;&#x440;&#x43e;&#x43c;&#x430;&#x433;&#x43d;&#x438;&#x442;&#x43d;&#x430;&#x44f; &#x441;&#x43e;&#x432;&#x43c;&#x435;&#x441;&#x442;&#x438;&#x43c;&#x43e;&#x441;&#x442;&#x44c; (&#x42d;&#x41c;&#x421;) &#x441; &#x434;&#x440;&#x443;&#x433;&#x438;&#x43c;&#x438; &#x440;&#x430;&#x434;&#x438;&#x43e;&#x44d;&#x43b;&#x435;&#x43a;&#x442;&#x440;&#x43e;&#x43d;&#x43d;&#x44b;&#x43c;&#x438; &#x441;&#x440;&#x435;&#x434;&#x441;&#x442;&#x432;&#x430;&#x43c;&#x438;.     &#x41d;&#x435;&#x434;&#x43e;&#x441;&#x442;&#x430;&#x442;&#x43a;&#x438;: &#x441;&#x43b;&#x43e;&#x436;&#x43d;&#x43e;&#x441;&#x442;&#x44c; &#x441;&#x43e;&#x437;&#x434;&#x430;&#x43d;&#x438;&#x44f; &#x431;&#x43e;&#x43b;&#x44c;&#x448;&#x438;&#x445; &#x441;&#x438;&#x441;&#x442;&#x435;&#x43c; &#x428;&#x41f;&#x421;, &#x43e;&#x431;&#x43b;&#x430;&#x434;&#x430;&#x44e;&#x449;&#x438;&#x445; &#x43c;&#x438;&#x43d;&#x438;&#x43c;&#x430;&#x43b;&#x44c;&#x43d;&#x44b;&#x43c;&#x438; &#x432;&#x437;&#x430;&#x438;&#x43c;&#x43e;&#x43a;&#x43e;&#x440;&#x440;&#x435;&#x43b;&#x44f;&#x446;&#x438;&#x43e;&#x43d;&#x43d;&#x44b;&#x43c;&#x438; &#x443;&#x43d;&#x43a;&#x446;&#x438;&#x44f;&#x43c;&#x438;; &#x43f;&#x440;&#x438;&#x43c;&#x435;&#x43d;&#x435;&#x43d;&#x438;&#x435; &#x441;&#x43b;&#x43e;&#x436;&#x43d;&#x44b;&#x445; &#x438; &#x434;&#x43e;&#x440;&#x43e;&#x433;&#x43e;&#x441;&#x442;&#x43e;&#x44f;&#x449;&#x438;&#x445; &#x443;&#x441;&#x442;&#x440;&#x43e;&#x439;&#x441;&#x442;&#x432; &#x43e;&#x431;&#x440;&#x430;&#x431;&#x43e;&#x442;&#x43a;&#x438;, &#x432; &#x447;&#x430;&#x441;&#x442;&#x43d;&#x43e;&#x441;&#x442;&#x438;, &#x441;&#x43e;&#x433;&#x43b;&#x430;&#x441;&#x43e;&#x432;&#x430;&#x43d;&#x43d;&#x44b;&#x445; &#x441; &#x428;&#x41f;&#x421; &#x444;&#x438;&#x43b;&#x44c;&#x442;&#x440;&#x43e;&#x432;.    &#x421;&#x43b;&#x435;&#x434;&#x443;&#x435;&#x442; &#x43e;&#x442;&#x43c;&#x435;&#x442;&#x438;&#x442;&#x44c;, &#x447;&#x442;&#x43e; &#x43d;&#x435;&#x434;&#x43e;&#x441;&#x442;&#x430;&#x442;&#x43a;&#x438; &#x428;&#x41f;&#x421; &#x43e;&#x442;&#x43d;&#x43e;&#x441;&#x44f;&#x442;&#x441;&#x44f; &#x441;&#x43a;&#x43e;&#x440;&#x435;&#x435; &#x43a; &#x442;&#x435;&#x445;&#x43d;&#x438;&#x447;&#x435;&#x441;&#x43a;&#x43e;&#x439; &#x440;&#x435;&#x430;&#x43b;&#x438;&#x437;&#x430;&#x446;&#x438;&#x438; &#x441;&#x438;&#x441;&#x442;&#x435;&#x43c; &#x441;&#x432;&#x44f;&#x437;&#x438; &#x43a;&#x430;&#x43a; &#x442;&#x430;&#x43a;&#x43e;&#x432;&#x44b;&#x445; &#x438; &#x441; &#x443;&#x43b;&#x443;&#x447;&#x448;&#x435;&#x43d;&#x438;&#x435;&#x43c; &#x44d;&#x43b;&#x435;&#x43c;&#x435;&#x43d;&#x442;&#x43d;&#x43e;&#x439; &#x431;&#x430;&#x437;&#x44b; (&#x43f;&#x440;&#x438;&#x43c;&#x435;&#x43d;&#x435;&#x43d;&#x438;&#x435; &#x421;&#x411;&#x418;&#x421;, &#x443;&#x441;&#x442;&#x440;&#x43e;&#x439;&#x441;&#x442;&#x432; &#x43d;&#x430; &#x41f;&#x410;&#x412;) &#x43e;&#x43d;&#x438; &#x43d;&#x435; &#x441;&#x442;&#x43e;&#x43b;&#x44c; &#x441;&#x443;&#x449;&#x435;&#x441;&#x442;&#x432;&#x435;&#x43d;&#x43d;&#x44b;. &#x412; &#x441;&#x432;&#x43e;&#x44e; &#x43e;&#x447;&#x435;&#x440;&#x435;&#x434;&#x44c;, &#x434;&#x43e;&#x441;&#x442;&#x43e;&#x438;&#x43d;&#x441;&#x442;&#x432;&#x430; &#x428;&#x41f;&#x421; - &#x44d;&#x442;&#x43e; &#x43d;&#x435;&#x43e;&#x442;&#x44a;&#x435;&#x43c;&#x43b;&#x438;&#x43c;&#x44b;&#x435; &#x438;&#x445; &#x441;&#x432;&#x43e;&#x439;&#x441;&#x442;&#x432;&#x430;, &#x437;&#x430;&#x43b;&#x43e;&#x436;&#x435;&#x43d;&#x43d;&#x44b;&#x435; &#x432; &#x441;&#x430;&#x43c;&#x43e;&#x439; &#x43f;&#x440;&#x438;&#x440;&#x43e;&#x434;&#x435; &#x434;&#x430;&#x43d;&#x43d;&#x43e;&#x433;&#x43e; &#x43a;&#x43b;&#x430;&#x441;&#x441;&#x430; &#x441;&#x438;&#x433;&#x43d;&#x430;&#x43b;&#x43e;&#x432;.    &#x414;&#x43b;&#x44f; &#x442;&#x43e;&#x433;&#x43e;, &#x447;&#x442;&#x43e;&#x431;&#x44b; &#x43f;&#x43e;&#x44f;&#x441;&#x43d;&#x438;&#x442;&#x44c; &#x441;&#x443;&#x442;&#x44c; &#x43f;&#x440;&#x435;&#x438;&#x43c;&#x443;&#x449;&#x435;&#x441;&#x442;&#x432; &#x43f;&#x440;&#x438;&#x43c;&#x435;&#x43d;&#x435;&#x43d;&#x438;&#x44f; &#x428;&#x41f;&#x421; &#x438; &#x432; &#x434;&#x430;&#x43b;&#x44c;&#x43d;&#x435;&#x439;&#x448;&#x435;&#x43c; &#x43f;&#x435;&#x440;&#x435;&#x439;&#x442;&#x438; &#x43a; &#x43f;&#x440;&#x438;&#x43d;&#x446;&#x438;&#x43f;&#x430;&#x43c; &#x440;&#x430;&#x431;&#x43e;&#x442;&#x44b; &#x441;&#x438;&#x441;&#x442;&#x435;&#x43c; &#x43f;&#x43e;&#x434;&#x432;&#x438;&#x436;&#x43d;&#x43e;&#x439; &#x441;&#x432;&#x44f;&#x437;&#x438; &#x441; &#x43a;&#x43e;&#x434;&#x43e;&#x432;&#x44b;&#x43c; &#x440;&#x430;&#x437;&#x434;&#x435;&#x43b;&#x435;&#x43d;&#x438;&#x435;&#x43c; &#x43a;&#x430;&#x43d;&#x430;&#x43b;&#x43e;&#x432;, &#x43d;&#x435;&#x43e;&#x431;&#x445;&#x43e;&#x434;&#x438;&#x43c;&#x43e; &#x440;&#x430;&#x441;&#x441;&#x43c;&#x43e;&#x442;&#x440;&#x435;&#x442;&#x44c; &#x43d;&#x435;&#x441;&#x43a;&#x43e;&#x43b;&#x44c;&#x43a;&#x43e; &#x43f;&#x440;&#x438;&#x43d;&#x446;&#x438;&#x43f;&#x438;&#x430;&#x43b;&#x44c;&#x43d;&#x44b;&#x445; &#x43c;&#x43e;&#x43c;&#x435;&#x43d;&#x442;&#x43e;&#x432;, &#x431;&#x435;&#x437; &#x43a;&#x43e;&#x442;&#x43e;&#x440;&#x44b;&#x445; &#x43d;&#x435;&#x432;&#x43e;&#x437;&#x43c;&#x43e;&#x436;&#x43d;&#x43e; &#x432;&#x435;&#x441;&#x442;&#x438; &#x434;&#x430;&#x43b;&#x44c;&#x43d;&#x435;&#x439;&#x448;&#x435;&#x435; &#x438;&#x437;&#x43b;&#x43e;&#x436;&#x435;&#x43d;&#x438;&#x435;.  &#x412;&#x44b;&#x432;&#x43e;&#x434;&#x44b;: 1.&#x9;&#x43e;&#x43f;&#x442;&#x438;&#x43c;&#x430;&#x43b;&#x44c;&#x43d;&#x44b;&#x439; &#x43f;&#x440;&#x438;&#x435;&#x43c;&#x43d;&#x438;&#x43a; &#x428;&#x41f;&#x421; - &#x43f;&#x440;&#x438;&#x435;&#x43c;&#x43d;&#x438;&#x43a; &#x43a;&#x43e;&#x440;&#x440;&#x435;&#x43b;&#x44f;&#x446;&#x438;&#x43e;&#x43d;&#x43d;&#x43e;&#x433;&#x43e; &#x442;&#x438;&#x43f;&#x430;; 2.&#x9;&#x441;&#x43a;&#x440;&#x44b;&#x442;&#x43d;&#x43e;&#x441;&#x442;&#x44c; &#x441;&#x438;&#x441;&#x442;&#x435;&#x43c;&#x44b; &#x43e;&#x43f;&#x440;&#x435;&#x434;&#x435;&#x43b;&#x44f;&#x435;&#x442;&#x441;&#x44f; &#x442;&#x435;&#x43c;, &#x447;&#x442;&#x43e; &#x43f;&#x435;&#x440;&#x435;&#x43d;&#x43e;&#x441;&#x447;&#x438;&#x43a; &#x438;&#x43d;&#x444;&#x43e;&#x440;&#x43c;&#x430;&#x446;&#x438;&#x438; &#x43f;&#x43e; &#x441;&#x443;&#x442;&#x438; &#x448;&#x443;&#x43c;, &#x438; &#x432; &#x44d;&#x444;&#x438;&#x440;&#x435; &#x435;&#x433;&#x43e; &#x432;&#x435;&#x441;&#x44c;&#x43c;&#x430; &#x442;&#x440;&#x443;&#x434;&#x43d;&#x43e; &#x43e;&#x442;&#x43b;&#x438;&#x447;&#x438;&#x442;&#x44c; &#x43e;&#x442; &#x441;&#x442;&#x43e;&#x440;&#x43e;&#x43d;&#x43d;&#x438;&#x445; &#x448;&#x443;&#x43c;&#x43e;&#x432;; 3.&#x9;&#x43a;&#x43e;&#x43d;&#x444;&#x438;&#x434;&#x435;&#x43d;&#x446;&#x438;&#x430;&#x43b;&#x44c;&#x43d;&#x43e;&#x441;&#x442;&#x44c; &#x441;&#x438;&#x441;&#x442;&#x435;&#x43c;&#x44b; &#x437;&#x430;&#x43a;&#x43b;&#x44e;&#x447;&#x430;&#x435;&#x442;&#x441;&#x44f; &#x432; &#x43d;&#x435;&#x43e;&#x431;&#x445;&#x43e;&#x434;&#x438;&#x43c;&#x43e;&#x441;&#x442;&#x438; &#x437;&#x43d;&#x430;&#x43d;&#x438;&#x44f; &#x432; &#x441;&#x43b;&#x443;&#x447;&#x430;&#x435; &#x43d;&#x435;&#x441;&#x430;&#x43d;&#x43a;&#x446;&#x438;&#x43e;&#x43d;&#x438;&#x440;&#x43e;&#x432;&#x430;&#x43d;&#x43d;&#x43e;&#x433;&#x43e; &#x43f;&#x435;&#x440;&#x435;&#x445;&#x432;&#x430;&#x442;&#x430; &#x442;&#x43e;&#x447;&#x43d;&#x43e;&#x439; &#x43a;&#x43e;&#x43f;&#x438;&#x438; &#x428;&#x41f;&#x421;, &#x438;&#x441;&#x43f;&#x43e;&#x43b;&#x44c;&#x437;&#x443;&#x435;&#x43c;&#x43e;&#x439; &#x43d;&#x430; &#x43f;&#x435;&#x440;&#x435;&#x434;&#x430;&#x44e;&#x449;&#x435;&#x439; &#x441;&#x442;&#x43e;&#x440;&#x43e;&#x43d;&#x435;; 4.&#x9;&#x434;&#x43b;&#x44f; &#x44d;&#x444;&#x444;&#x435;&#x43a;&#x442;&#x438;&#x432;&#x43d;&#x43e;&#x439; &#x440;&#x430;&#x431;&#x43e;&#x442;&#x44b; &#x441;&#x438;&#x441;&#x442;&#x435;&#x43c;&#x44b; &#x441;&#x432;&#x44f;&#x437;&#x438; &#x43d;&#x435;&#x43e;&#x431;&#x445;&#x43e;&#x434;&#x438;&#x43c;&#x43e; &#x441;&#x43e;&#x437;&#x434;&#x430;&#x442;&#x44c; &#x441;&#x438;&#x441;&#x442;&#x435;&#x43c;&#x443; &#x440;&#x430;&#x437;&#x43b;&#x438;&#x447;&#x43d;&#x44b;&#x445; &#x428;&#x41f;&#x421;, &#x43a;&#x43e;&#x442;&#x43e;&#x440;&#x44b;&#x435; &#x43b;&#x435;&#x433;&#x43a;&#x43e; &#x444;&#x43e;&#x440;&#x43c;&#x438;&#x440;&#x43e;&#x432;&#x430;&#x43b;&#x438;&#x441;&#x44c; &#x431;&#x44b; &#x43d;&#x430; &#x43f;&#x440;&#x438;&#x435;&#x43c;&#x43d;&#x43e;&#x439; &#x441;&#x442;&#x43e;&#x440;&#x43e;&#x43d;&#x435;. "/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[568, 423]"/>
     </Property>
@@ -24,13 +25,100 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="568" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="jButton1" min="-2" pref="70" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="Save_jButton4" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="OK_jButton3" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
+                      <Component id="Exit_jButton2" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="jScrollPane2" min="-2" pref="500" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="33" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="423" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="jScrollPane2" min="-2" pref="318" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="Exit_jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="OK_jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="Save_jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Help"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
+    </Component>
+    <Container class="javax.swing.JScrollPane" name="jScrollPane2">
+      <AuxValues>
+        <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+      </AuxValues>
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+      <SubComponents>
+        <Component class="javax.swing.JTextPane" name="jTextPane1">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+          </Properties>
+        </Component>
+      </SubComponents>
+    </Container>
+    <Component class="javax.swing.JButton" name="Exit_jButton2">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Exit"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Exit_jButton2ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="OK_jButton3">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="OK"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="OK_jButton3ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="Save_jButton4">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Save"/>
+      </Properties>
+    </Component>
+  </SubComponents>
 </Form>
